WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177101
Web Inspector: WebView indication highlights sticks around for WebKitLegacy views
https://bugs.webkit.org/show_bug.cgi?id=177101
Summary
Web Inspector: WebView indication highlights sticks around for WebKitLegacy v...
Joseph Pecoraro
Reported
2017-09-18 13:59:09 PDT
WebView indication highlights sticks around for WebKitLegacy views Steps to reproduce: 1. Build + Run a macOS Application using a WebKitLegacy WebView 2. Show Safari's Develop menu 3. Hover the Menu Item for the WebView in this test application => Application shows Indication Highlight for the WebView 4. Dismiss the Menu => Application should dismiss Indication Highlight, but it is still visible!
Attachments
[PATCH] Proposed Fix
(1.29 KB, patch)
2017-09-18 14:02 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-09-18 13:59:42 PDT
<
rdar://problem/34500648
>
Joseph Pecoraro
Comment 2
2017-09-18 14:02:09 PDT
Created
attachment 321128
[details]
[PATCH] Proposed Fix
Blaze Burg
Comment 3
2017-09-20 09:12:11 PDT
Comment on
attachment 321128
[details]
[PATCH] Proposed Fix r=me
WebKit Commit Bot
Comment 4
2017-09-20 09:19:09 PDT
Comment on
attachment 321128
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 321128 Committed
r222266
: <
http://trac.webkit.org/changeset/222266
>
WebKit Commit Bot
Comment 5
2017-09-20 09:19:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug