Web Inspector: WebView indication highlights sticks around for WebKitLegacy views https://bugs.webkit.org/show_bug.cgi?id=177101 <rdar://problem/34500648>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-09-20
Reviewed by Brian Burg.

* WebInspector/WebNodeHighlight.mm:
Ensure we close the window that we have just removed.

Canonical link: https://commits.webkit.org/193581@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222266 268f45cc-cd09-0410-ab3c-d52691b4dbfc